# mini-card-game

./: .dockerignore  Dockerfile  Dockerfile.deploy  README.md  deploy.sh  docker-compose.deploy.yml  docker-compose.yml  docker.sh
.cursor/rules/: pr-and-release.mdc  restart-backend-after-changes.mdc
.github/workflows/: build-push.yml  ci.yml
backend/: README.md  config.py  main.py  pyproject.toml  requirements.txt
backend/auth/: users.json  users.py
backend/game/: cards.py  models.py  rules.py  state.py  victory.py
backend/tests/: README.md
backend/tests/e2e/: test_client.py  test_game_flow.py
backend/tests/unit/: test_basic.py  test_cards.py  test_game_state.py
backend/websocket/: server.py
deploy/: nginx.conf  start.sh
deploy-data/: users.json.example
docs/: DEPLOY.md  DEVELOPMENT_WORKFLOW.md  DOCKER.md  IMPLEMENTATION_SUMMARY.md  MCP_BROWSER_SETUP.md  QUICK_START.md  backend_implementation.md  backend_testing.md  frontend_implementation.md  frontend_review.md  frontend_summary.md  overview.md  victory_flow.md
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/assets/styles/: index.css
frontend/src/components/common/: Button.tsx
frontend/src/components/game/: Card.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: Game.tsx  Home.tsx  Lobby.tsx  Login.tsx
frontend/src/services/: websocket.ts
frontend/src/stores/: gameStore.ts  playerStore.ts
frontend/src/types/: game.ts  message.ts
frontend/src/utils/: constants.ts
